--- a/main.css
+++ b/main.css
@@ -11,9 +11,8 @@
     border-radius: 10px;
     box-shadow: 0 0 4px;
 }
-.next, .prev{
-    position: fixed;
-    bottom: 10px;
+.next{
+    text-align: center;
     text-decoration: none;
     font-size: 24px;
     padding: 10px 16px;
@@ -21,12 +20,6 @@
     background-color: rgb(245, 38, 38);
     border-radius: 10px;
     box-shadow: 0 0 4px;
-}
-.next{
-    right: 20%;
-}
-.prev{
-    left: 20%;
 }
 .audio{
     top: 10px;
