--- a/card.css
+++ b/card.css
@@ -7,7 +7,7 @@ body {
     }
     
     #card{
-        height:auto;
+        height: 130vh;
         width:80vw;
         margin-top: 10vh !important;
 
